--- a/ComicViewer/src/app/comic-strip/comic-strip.component.html
+++ b/ComicViewer/src/app/comic-strip/comic-strip.component.html
@@ -7,5 +7,6 @@
       <input [(ngModel)]="comic.name" placeholder="name"/>
     </label>
   </div>
-
+  <button (click)="goBack()">go back</button>  
+  <button (click)="save()">save</button>  
 </div>
