Methods to retrieve first/last image added, renamed some api methods to be more consistent

--- a/ComicViewer/src/app/comic-strip/comic-strip.component.html
+++ b/ComicViewer/src/app/comic-strip/comic-strip.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="comic">
+<div *ngIf="comic" class="right">
 
   <h2>{{comic.name | uppercase}} Details</h2>
   <div><span>id: </span>{{comic.id}}</div>
