--- a/ComicViewer/src/styles.css
+++ b/ComicViewer/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+/* .container {
+    margin: auto;
+    padding: 10px;    
+}
+.left {    
+    float: left;
+    padding: 10px;
+    outline: 1px dashed red;
+}
+.right {    
+    position: sticky;    
+    padding: 10px;
+    height: 200px;
+} */
