Loading last comic for each strip
Former-commit-id: 64a287755aa931aa15628c5bdb896284a08d464b

--- a/ComicViewer/src/app/section/section.component.html
+++ b/ComicViewer/src/app/section/section.component.html
@@ -1,3 +1,5 @@
 <h2>{{content.name}}</h2>
+<p>{{content.description}}</p>
 <hr>
-<img src="{{content.img}}"/>
+<img [src]="getSafeUrl()" height={{this.height}} width={{this.width}} id="comic-strip"/>
+
