--- a/ComicViewer/src/app/container/container.component.css
+++ b/ComicViewer/src/app/container/container.component.css
@@ -3,7 +3,7 @@
     top: 0px;
     width:100%;
     z-index: 2;
-    background: #252830;
+    background: #8827e2;
     height:70px; 
     margin-left: 40px;
   } 
