Removing of unused components left over from the Tour of Heros
Former-commit-id: f41f87beba183a6baab9af612255c25247fdad04

--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -1,6 +1,2 @@
-<!-- <nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/comics">Comics</a>
-</nav> -->
-<router-outlet></router-outlet>
-<app-messages></app-messages>
+<h1>The Comic Viewer</h1>
+<container [sections]="sections"></container>
