Integrate Material Theme to strip viewer
Former-commit-id: 462c8a35e1a2db8fb1ca5219e3fdb228e1044e95

--- a/ComicViewer/src/app/section/section.component.css
+++ b/ComicViewer/src/app/section/section.component.css
@@ -1,5 +1,13 @@
-hr {
-    margin-bottom: 21px;
-    border: 0;
-    border-top: 1px solid #434857;
+/* .example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+} */
+
+mat-card-header {
+  margin-bottom: 5px; 
+}
+
+mat-card { 
+  margin-bottom: 10px; 
+  width: 1000px;
 }
