--- a/ComicViewer/src/app/section/section.component.css
+++ b/ComicViewer/src/app/section/section.component.css
@@ -1,7 +1,6 @@
-/* .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+.example-header-image {
   background-size: cover;
-} */
+} 
 
 mat-card-header {
   margin-bottom: 5px; 
