--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -1,13 +1,9 @@
 /* AppComponent's private CSS styles */
 h1 {
-  font-size: 1.2em;
-  color: #999;
-  margin-bottom: 0;
-}
-h2 {
-  font-size: 2em;
-  margin-top: 0;
-  padding-top: 0;
+  margin: 10,10,10,10;
+  font-size: 80px;
+  letter-spacing: -2px;
+  color: #fff; 
 }
 nav a {
   padding: 5px 10px;
