Updated gradle tasks to include ComicViewer in ComicAPI docker container
Former-commit-id: 035937ff102cad4771915b5a2fb67597630791b8

--- a/ComicViewer/src/app/container/container.component.html
+++ b/ComicViewer/src/app/container/container.component.html
@@ -1,4 +1,4 @@
-<div class="header" *ngIf="currentSectionName!=null">
+<div class="header" *ngIf="currentComicName!=null">
   <h2 >{{currentSectionName}}</h2>
 </div>
 <ul>
