Cleaned up css, added header image
Former-commit-id: cf29865cff1cb6ca952d0082d06a55c37a2a2550

--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1>The Comic Viewer</h1>
+<img class="comic-header" src="/assets/images/ComicViewer.png">
 <container [sections]="sections"></container>
