--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -1,25 +1,14 @@
 /* AppComponent's private CSS styles */
-h1 {
-  margin: 10,10,10,10;
-  font-size: 80px;
-  letter-spacing: -2px;
-  color: #fff; 
+mat-card { 
+  margin-bottom: 10px; 
+  width: 1000px;
 }
-nav a {
-  padding: 5px 10px;
-  text-decoration: none;
-  margin-top: 10px;
-  display: inline-block;
-  background-color: #eee;
-  border-radius: 4px;
-}
-nav a:visited, a:link {
-  color: #607d8b;
-}
-nav a:hover {
-  color: #039be5;
-  background-color: #cfd8dc;
-}
-nav a.active {
-  color: #039be5;
+.comic-header { 
+  margin-bottom: 10px; 
+  width: 1000px;
+  align-content: center;
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-left: 50px;
 }
