Added buttons for the jumplist
Former-commit-id: cdf8c8451d21c6e903cea29e1e08d3f35dbbc5ec

--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -12,3 +12,14 @@ mat-card {
   padding-bottom: 5px;
   padding-left: 50px;
 }
+.column {
+  float: left;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
