--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -1,3 +1,6 @@
 <img class="comic-header" src="/assets/images/ComicViewer.png">
-<jumplist/>
-<container [sections]="sections"></container>
+<div class="row">
+    <div class="column"><jumplist></jumplist></div>
+    <div class="column"><container [sections]="sections"></container></div>
+</div>
+
