--- a/ComicViewer/src/app/jumplist/jumplist.component.html
+++ b/ComicViewer/src/app/jumplist/jumplist.component.html
@@ -1,3 +1,3 @@
-<p>
-  jumplist works!
-</p>
+<mat-card> 
+      <button *ngFor="let target of jumptargets" mat-button>{{target.name}}</button>  
+</mat-card>
