--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -3,6 +3,11 @@ mat-card {
   margin-bottom: 10px; 
   width: 1000px;
 }
+mat-card.header-mat {
+  margin-left: 40px;
+  margin-bottom: 10px; 
+  width: 1000px;
+}
 .comic-header { 
   margin-bottom: 10px; 
   width: 1000px;
@@ -22,4 +27,8 @@ mat-card {
 
 .right {
   width: 75%;
+}
+
+button {
+  margin-left: 10px
 }
