--- a/ComicViewer/src/app/jumplist/jumplist.component.html
+++ b/ComicViewer/src/app/jumplist/jumplist.component.html
@@ -1,3 +1,3 @@
 <mat-card>
-      <button *ngFor="let target of jumptargets" mat-button>{{target.name}}</button>  
+      <button class="jump" *ngFor="let target of jumptargets" mat-button>{{target.name}}</button>  
 </mat-card>
