--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -2,5 +2,7 @@
 <mat-card class="mat-card header-mat">
         <button onclick="window.location.href='https://bitbucket.org/kkdad/comiccacher/src/master/'">Project</button>
         <button onclick="window.location.href='docs/index.html'">API Documentation</button>        
+        <button routerLink="/comics">Today's Strips</button>
+        <button routerLink="/refresh">Refresh</button>
 </mat-card>
 <router-outlet></router-outlet>
