--- a/ComicViewer/src/styles.css
+++ b/ComicViewer/src/styles.css
@@ -1,6 +1,4 @@
-body { 
-    height: 100%; 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color:#977160;
+body {
+    margin: 0px;
+    padding: 0px;
 }
