--- a/ComicViewer/src/app/comicpage/jumplist/jumplist.component.css
+++ b/ComicViewer/src/app/comicpage/jumplist/jumplist.component.css
@@ -1,11 +1,12 @@
-mat-card-header {
-    margin-bottom: 5px; 
-  }
-  
-mat-card { 
+ mat-card { 
     margin-left: 10px;
     margin-bottom: 10px; 
     width: 200px;
+    background: rgba(0,0,0,.03);
+    border: 1px solid rgba(0,0,0,.03);
+    box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);  
+    margin-top: 100px;
+    /* position: fixed; */
 }
 
 button.jump {
