Update Header CSS
Former-commit-id: f8a1c8eeb1fb738183c5b4066b6b2d68274c3a1b

--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="topnav">
-    <p class="txt title">The Comic Reader</p>
-    <p class="txt subtitle">Serving up Daily Laughs since 2013</p>
+    <p class="txt title outline">The Comic Reader</p>
+    <p class="txt subtitle outline">Serving up Daily Laughs since 2013</p>
 </div>
 <div class="txt menu">
     <button mat-button onclick="window.location.href='https://bitbucket.org/kkdad/comiccacher/src/master/'">Project</button>
