--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -1,18 +1,20 @@
 .topnav {
+  background: url(/assets/images/moss.png) no-repeat;
   background-color: #58772b;
-  color: #f1f1f1;
+  color: #ebebeb;
   width: 100%;
   padding: 0;
-  margin: 0;
+  margin: 5;
   position: fixed;
   top: 0px;
   left: 0px;
   z-index: 2;
-  display: inline-block
+  display: inline-block;  
+  box-shadow: inset 5px 5px 10px 10px #58772b; 
 }
 
 .menu {
-  background-color: #748f4b;
+  background-color: #58772b;
   color: #f1f1f1;
   width: 100%;
   padding: 3px;
@@ -21,21 +23,31 @@
   top: 93px; 
 }
 
-.title {
+.outline {
   margin: 0px;  
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #59772b83; 
+  -webkit-font-smoothing: subpixel-antialiased;
+  letter-spacing: 0px;
+  font-kerning: none;
+  font-weight: 900;
+}
+
+.title {
   text-align: center;
-  font-size: 3.35169rem;
+  font-size: 72px;
+   line-height: 58.3px; 
 }
 
 .subtitle {
-  margin-top: 0px;
   margin-bottom: 10px;
   margin-inline-start: 180px;  
+  font-size: 30px;
   text-align: center;  
 }
 
 .txt {
-  font-family: Roboto,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
