--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="topnav">
-    <p class="txt title outline">The Comic Reader</p>
-    <p class="txt subtitle outline">Serving up Daily Laughs since 2013</p>
-</div>
-<div class="txt menu">
-    <button mat-button onclick="window.location.href='https://bitbucket.org/kkdad/comiccacher/src/master/'">Project</button>
-    <button mat-button onclick="window.location.href='docs/index.html'">API Documentation</button>        
-    <button mat-button routerLink="/comics">Today's Strips</button>
-    <button mat-button routerLink="/refresh">Refresh</button>
+    <p class="txt title outline">Daily Comics</p>
+    <div class="wrapper">
+        <div class="c1">
+            <button mat-button onclick="window.location.href='https://bitbucket.org/kkdad/comiccacher/src/master/'">Project</button>
+            <button mat-button onclick="window.location.href='docs/index.html'">API</button>        
+        </div>      
+        <div class="c2">
+            <button mat-button onclick="window.location.href='docs/index.html'">About</button>        
+        </div>      
+    </div>
 </div>
 <router-outlet></router-outlet>
