--- a/ComicViewer/src/app/comicpage/comicpage.component.css
+++ b/ComicViewer/src/app/comicpage/comicpage.component.css
@@ -1,15 +1,8 @@
-.column {
-    float: left;
-}
-
-.left {
-    width: 25%;
-}
-
-.right {
-    width: 75%;
-}
-
 button {
     margin-left: 10px
 }
+
+.box {
+    float: center;
+    width: 80%;
+}  
