--- a/ComicViewer/src/app/comicpage/comicpage.component.html
+++ b/ComicViewer/src/app/comicpage/comicpage.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="column">
+    <div class="column box">
         <container [sections]="sections"></container>
     </div>
 </div>
