added a simple about box
Former-commit-id: 006ba7cd09154ccb86269e568f4266137899a85f

--- a/ComicViewer/src/app/app.component.html
+++ b/ComicViewer/src/app/app.component.html
@@ -6,7 +6,7 @@
             <button mat-button onclick="window.location.href='docs/index.html'">API</button>        
         </div>      
         <div class="c2">
-            <button mat-button onclick="window.location.href='docs/index.html'">About</button>        
+            <button mat-button onclick="window.location.href='/about'">About</button>        
         </div>      
     </div>
 </div>
