--- a/ComicViewer/src/app/comicpage/comicpage.component.css
+++ b/ComicViewer/src/app/comicpage/comicpage.component.css
@@ -1,8 +1,5 @@
-button {
-    margin-left: 10px
-}
-
-.box {
+.box {    
     float: center;
-    width: 80%;
+    margin-left: auto;
+    margin-right: auto;    
 }  
