--- a/ComicViewer/src/app/comicpage/section/section.component.css
+++ b/ComicViewer/src/app/comicpage/section/section.component.css
@@ -4,6 +4,8 @@ mat-card-header {
 
 mat-card { 
   margin-bottom: 10px; 
+  margin-left: auto;
+  margin-right: auto;
   width: 1000px;
   background: rgba(0,0,0,.03);
   align-content: center;
