--- a/ComicViewer/src/app/about/about.component.html
+++ b/ComicViewer/src/app/about/about.component.html
@@ -3,7 +3,8 @@
     <p>Daily comics is a web comics cacher that amalgamates different daily comics from multiple sources into a single ad free page.</p>
     <p>Website for my personal use only, all comics are copywrited by their authors. Please use their official publishers please.<br>
     <p>Frontend: Angular 7<br>
-      Backend: REST API using Spring Framework</p>
+       Backend: REST API using Springboot2 Framework<br>
+       API: Spring-restdocs-mockmvc and Asciidoctor</p>
   </div>
   <div class="wrapper">
     <button mat-button (click)="onNavigateHome()">Return to the Comics</button>
