Fixed configuration reconciliation when adding new comics
Former-commit-id: 800d0f98763cb339fd16aa7357489f879e11060a

--- a/ComicViewer/src/app/about/about.component.css
+++ b/ComicViewer/src/app/about/about.component.css
@@ -4,7 +4,6 @@ mat-card {
     margin-right: auto;
     margin-bottom: 10px; 
     width: 1000px;
-    background: rgba(0,0,0,.03);
     align-content: center;
     align-items: center;
     border: 1px solid rgba(0,0,0,.03);
@@ -15,3 +14,17 @@ mat-card {
     display: flex;
     justify-content: center;
 }
+
+.bg {
+    background-image: url("/assets/images/gray-point-background.jpg");
+    /* Half height */
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
