--- a/ComicViewer/src/app/comicpage/comicpage.component.html
+++ b/ComicViewer/src/app/comicpage/comicpage.component.html
@@ -1,3 +1,5 @@
-<div class="box">
-    <container [sections]="sections"></container>
+<div class="bg">
+    <div class="box" >
+        <container [sections]="sections"></container>
+    </div>
 </div>
