--- a/ComicViewer/src/app/comicpage/section/section.component.css
+++ b/ComicViewer/src/app/comicpage/section/section.component.css
@@ -3,11 +3,12 @@ mat-card-header {
 }
 
 mat-card { 
+
   margin-bottom: 10px; 
   margin-left: auto;
   margin-right: auto;
   width: 1000px;
-  background: rgba(0,0,0,.03);
+  /* background: rgba(0,0,0,.03); */
   align-content: center;
   align-items: center;
   border: 1px solid rgba(0,0,0,.03);
