Switched to cdk-virtual-scroll-viewport to enabling inifinte scrolling without prelaoding everything.
Former-commit-id: 2251e2e698c124f3bf0eb44be847f6492e478d4d

--- a/ComicViewer/src/app/comicpage/container/container.component.css
+++ b/ComicViewer/src/app/comicpage/container/container.component.css
@@ -1,4 +1,14 @@
-ul {
+cdk-virtual-scroll-viewport {
+    height:100vh;    
+    position: relative;
+}
+
+ul {    
+    width: 100%;  
+    height:100vh;
+    overflow: hidden;   
+
     list-style-type: none; 
-    margin-top: 100px;
+    margin-top: 80px;
+    margin: 10,10,10, 10;
 }
