Upgrading framework to 12

--- a/ComicViewer/src/app/comicpage/comicpage.component.html
+++ b/ComicViewer/src/app/comicpage/comicpage.component.html
@@ -1,5 +1,6 @@
 <div class="bg">
     <div class="box" >
-        <container [sections]="sections"></container>
+        <ComicpageComponent [sections]="sections"></container>
     </div>
 </div>
+
