Fix issues from Angular upgrade

--- a/ComicViewer/src/app/comicpage/comicpage.component.html
+++ b/ComicViewer/src/app/comicpage/comicpage.component.html
@@ -1,6 +1,6 @@
 <div class="bg">
     <div class="box" >
-        <ComicpageComponent [sections]="sections"></container>
+        <container [sections]="sections"></container>
     </div>
 </div>
 
