--- a/ComicViewer/src/app/about/about.component.css
+++ b/ComicViewer/src/app/about/about.component.css
@@ -16,7 +16,8 @@ mat-card {
 }
 
 .bg {
-    background-image: url("/assets/images/gray-point-background.jpg");
+    background: rgb(250,232,196);
+    background: linear-gradient(180deg, rgba(250,232,196,1) 0%, rgba(255,217,127,1) 100%);
     /* Half height */
     width: 100%;
     height: 100vh;
