--- a/ComicViewer/src/app/comicpage/comicpage.component.css
+++ b/ComicViewer/src/app/comicpage/comicpage.component.css
@@ -1,5 +1,6 @@
 .bg {
-  background-image: url("/assets/images/gray-point-background.jpg");
+  background: rgb(250,232,196);
+  background: linear-gradient(180deg, rgba(250,232,196,1) 0%, rgba(255,217,127,1) 100%);
   width: 100%;
   overflow: hidden; 
 
