Fix material buttons & update CSS

--- a/ComicViewer/src/app/about/about.component.html
+++ b/ComicViewer/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="bg">
-  <mat-card class="example-card"> 
+  <mat-card appearance="elevated" class="example-card">
+    <mat-card-content> 
     <div>
       <p>Daily comics is a web comics cacher that amalgamates different daily comics from multiple sources into a single ad free page.</p>
       <p>Website for my personal use only, all comics are copywrited by their authors. Please use their official publishers please.<br>
@@ -8,7 +9,8 @@
          API: Spring-restdocs-mockmvc and Asciidoctor</p>
     </div>
     <div class="wrapper">
-      <button mat-button (click)="onNavigateHome()">Return to the Comics</button>
+      <button mat-button className="mat-button-raised" (click)="onNavigateHome()">Return to the Comics</button>
     </div>
+  </mat-card-content>
   </mat-card>
   </div>
