--- a/ComicViewer/src/app/about/about.component.css
+++ b/ComicViewer/src/app/about/about.component.css
@@ -1,8 +1,9 @@
-mat-card { 
+
+.mat-mdc-card { 
     margin-left: auto;
     margin-top: 100px;
     margin-right: auto;
-    margin-bottom: 10px; 
+    margin-bottom: 40px; 
     width: 1000px;
     align-content: center;
     align-items: center;
@@ -22,7 +23,6 @@ mat-card {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    
   
     /* Center and scale the image nicely */
     background-position: center;
