--- a/ComicViewer/src/app/app.component.css
+++ b/ComicViewer/src/app/app.component.css
@@ -57,3 +57,11 @@
 .txt {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.mat-mdc-button {
+  background-color: rgb(245, 217, 170);
+  border-radius: 5px;
+  padding-left: 10;
+  padding-right: 10;
+  margin: 3px;
+}
