--- a/ComicViewer/src/app/comicpage/section/section.component.css
+++ b/ComicViewer/src/app/comicpage/section/section.component.css
@@ -1,16 +1,17 @@
-mat-card-header {
-  margin-bottom: 5px;   
-}
+/* .mat-mdc-card-header {
+  padding: 16px;
+  margin-bottom: 5px;  
+} */
 
-mat-card { 
-
+.mat-mdc-card { 
+  background-color: whitesmoke;
   margin-bottom: 10px; 
   margin-top: 10px; 
   margin-left: auto;
   margin-right: auto;
   width: 1000px;  
-  align-content: center;
-  align-items: center;
+  /* align-content: center;
+  align-items: center; */
   border: 1px solid rgba(0,0,0,.03);
   box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
 }
