--- a/ComicViewer/src/app/comicpage/section/section.component.html
+++ b/ComicViewer/src/app/comicpage/section/section.component.html
@@ -1,8 +1,8 @@
-<mat-card class="example-card">
+<mat-card appearance="elevated" class="example-card">
     <mat-card-header>
-        <img mat-card-avatar [src]="getAvatarImage()" /> 
-        <mat-card-title>{{content.name}}</mat-card-title>
-        <mat-card-subtitle>{{content.author}}</mat-card-subtitle>
+            <img mat-card-avatar [src]="getAvatarImage()" /> 
+            <mat-card-title>{{content.name}}</mat-card-title>
+            <mat-card-subtitle>{{content.author}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
             <p class="pubdate" style="margin-inline-end: 100px;">Published on: {{this.imageDate}}</p>
@@ -10,9 +10,9 @@
         <!-- <p>{{content.description}}</p> -->
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button (click)="onNavigateFirst()">First</button>
-        <button mat-button (click)="onPrev()">Previous</button>
-        <button mat-button (click)="onNext()">Next</button>
-        <button mat-button (click)="onNavigateLast()">Last</button>
+        <button mat-button className="mat-button-raised" (click)="onNavigateFirst()">First</button>
+        <button mat-button className="mat-button-raised" (click)="onPrev()">Previous</button>
+        <button mat-button className="mat-button-raised" (click)="onNext()">Next</button>
+        <button mat-button className="mat-button-raised" (click)="onNavigateLast()">Last</button>
     </mat-card-actions>      
 </mat-card>
