Convert app to use standalone components and modern bootstrapping

--- a/ComicViewer/src/app/comicpage/container/container.component.html
+++ b/ComicViewer/src/app/comicpage/container/container.component.html
@@ -1,7 +1,7 @@
 <ul>
   <cdk-virtual-scroll-viewport autosize [itemSize]="itemSizeFn">
       <div *cdkVirtualFor="let section of sections">
-            <section [content]="section" (sectionPosition)="sectionPosition($event)"></section>          
+            <section [content]="section"></section>
       </div>
-  </cdk-virtual-scroll-viewport>      
+  </cdk-virtual-scroll-viewport>
 </ul>
