--- a/comic-web/src/app/about/about.component.css
+++ b/comic-web/src/app/about/about.component.css
@@ -1,19 +1,8 @@
 
-.mat-mdc-card { 
-    margin-left: auto;
-    margin-top: 100px;
-    margin-right: auto;
-    margin-bottom: 40px; 
-    width: 1000px;
-    align-content: center;
-    align-items: center;
-    border: 1px solid rgba(0,0,0,.03);
-    box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
-}
-
-.wrapper {
+.button-wrapper {
     display: flex;
     justify-content: center;
+    margin-top: var(--spacing-md);
 }
 
 .bg {
